fixed size of hacken icons on firefox

--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -85,6 +85,10 @@
             text-align: left;
         }
     }
+	img.check {
+		width: 100% !important;
+		max-width: 61px !important;
+	}
 }
 
 .flex-container {
